--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-jshint": "^2.1.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.5",
+    "jshint": "^2.9.5"
   }
 }
